Changed the heading

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
   <li><a href="ice/ice.html">Ice Cream Stats</a></li>
   <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">?</a></li>
 </ul>
-	<h2 class="h2">Welcome to NaTran's Homepage!</h2>
+	<h2 class="h2">This is NaTran's Homepage!</h2>
 	<h1>A Home Away From Home!</h1>
 	<img src="images/Nathan.jpg" height="450" class="img1">
 	<h2 style="text-align:center;color:red;">About Me...</h2>
