--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -15,13 +15,10 @@
 	<h2 class="p1">CSE Activity 1.1.3 Branching and Iteration</h2>
 	<a href="https://scratch.mit.edu/projects/118885743/"><img src="images/scratch2.png"></a>
 	<p class="p2">Using the Scratch website, I was able to complete this CSE activity! The goal of this activity was to familiarize beginners such as I with Scratch interface. Click on the image to view it! </p>
-	<a href="https://scratch.mit.edu/projects/119842814/"><img src="images/capture.png"></a>
+	<a href="https://scratch.mit.edu/projects/119842814/"><img src="images/Capture.png"></a>
 	<p class="p2">I made another project using the scratch website. It is based on the 'game' theme. Click on the image to view it!"</p>
 	<p "https://docs.google.com/spreadsheets/d/1qi825qJxCAphrC_ogfvFZNitKsbgaY5m-rF6dEvY3uc/edit?usp=sharing"></p>
 	<a href="https://docs.google.com/spreadsheets/d/1qi825qJxCAphrC_ogfvFZNitKsbgaY5m-rF6dEvY3uc/edit?usp=sharing">BACKLOG</a>
-	<a href="https://scratch.mit.edu/projects/119842814/"><img src="images/capture.png"></a>
-	<p class="p2">I made another project using the scratch website. It is based on the 'game' theme. Click on the image to view it!"</p>
-	<p "https://docs.google.com/spreadsheets/d/1qi825qJxCAphrC_ogfvFZNitKsbgaY5m-rF6dEvY3uc/edit?usp=sharing"></p>
 	<a href="https://docs.google.com/spreadsheets/d/1qi825qJxCAphrC_ogfvFZNitKsbgaY5m-rF6dEvY3uc/edit?usp=sharing">BACKLOG</a>
 	</body>
 
