--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -11,7 +11,7 @@
     <li><a href="portfolio.html">Portfolio</a></li>
 	<li><a href="../ice/ice.html">Ice Cream Stats!</a></li>
 	<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">?</a></li>
-	<h1>Nathan Tran</h1>
+	<h1 align="middle">Nathan Tran</h1>
 	<h2 class="p1">CSE Activity 1.1.3 Branching and Iteration</h2>
 	<a href="https://scratch.mit.edu/projects/118885743/"><img src="images/scratch2.png"></a>
 	<p class="p2">Using the Scratch website, I was able to complete this CSE activity! The goal of this activity was to familiarize beginners such as I with Scratch interface. Click on the image to view it! </p>
