--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -18,5 +18,7 @@
 	<a href="https://scratch.mit.edu/projects/119842814/"><img src="images/capture.png"></a>
 	<p class="p2">I made another project using the scratch website. It is based on the 'game' theme. Click on the image to view it!"</p>
 	<a href="https://docs.google.com/spreadsheets/d/1qi825qJxCAphrC_ogfvFZNitKsbgaY5m-rF6dEvY3uc/edit?usp=sharing">BACKLOG</a>
+	<a href="https://repl.it/DxlA/123"><img src="images/mafia.png"></a>
+	<p class="p2">Using the website repl.it, my partner and I were able to make a simple game based off of the card game 'Mafia.' Click on the image to play it!</p>
 	</body>
 
