--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">?</a></li>
 </ul>
 	<h2 class="h2">This is NaTran's Homepage!</h2>
-	<img src="images/Nathan.jpg" height="450" class="img1">
+	<img src="images/Nathan.jpg" height="450">
 	<h1>A Home Away From Home!</h1>
 	<h2 style="text-align:center;color:red;">About Me...</h2>
 	<center><p>I am native from a city called Chino Hills... However, I went to the mystical school of Diamond Bar High School. Having transferred, I must now face the ultimate challenge of life as a junior in AHS... AP Computer Science!!! I have no prior knowledge of the subject and will have to work double
