--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-<link href="portfolio.css" rel="stylesheet" type="text/css">
 <!-- The tags below specify the meta (browser data) and page title -->
   <head>
     <meta charset="utf-8">
@@ -20,5 +19,7 @@
 	<a href="https://docs.google.com/spreadsheets/d/1qi825qJxCAphrC_ogfvFZNitKsbgaY5m-rF6dEvY3uc/edit?usp=sharing">BACKLOG</a>
 	<a href="https://repl.it/DxlA/123"><img src="images/mafia.png"></a>
 	<p class="p2">Using the website repl.it, my partner and I were able to make a simple game based off of the card game 'Mafia.' Click on the image to play it!</p>
+	<a href="3.2.7 nathan tran jeffrey kim.zip"><img src="images/jazzz.png"></a>
+	<p class="p2">Harnessing the unlimited power of the program Canopy, my parter and I were able to create a rainbow-colored statistical extravaganza. Our objective was to create a visual representation of a prompt that was randomly assigned to us. From this assignment, I have learned to value and regard of visual data representation with importance. Click of the picture to download the .zip file! HOWEVER, make sure that you have Canopy insstalled on your computer to run the program!</p>
 	</body>
 
