--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<link href="portfolio.css" rel="stylesheet" type="text/css">
 <!-- The tags below specify the meta (browser data) and page title -->
   <head>
     <meta charset="utf-8">
