Will I ever successfully fix the top bar?

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -7,20 +7,22 @@
     <title>Portfolio!</title>
   </head>
 <!-- The tags below are what is displayed on the actual page -->
+	<ul>
     <li><a href="../index.html">Home</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
 	<li><a href="../ice/ice.html">Ice Cream Stats!</a></li>
 	<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">?</a></li>
+	</ul>
 	<h1>Nathan Tran</h1>
 	<h2 class="p1">CSE Activity 1.1.3 Branching and Iteration</h2>
 	<a href="https://scratch.mit.edu/projects/118885743/"><img src="images/scratch2.png"></a>
 	<p class="p2">Using the Scratch website, I was able to complete this CSE activity! The goal of this activity was to familiarize beginners such as I with Scratch interface. Click on the image to view it! </p>
 	<a href="https://scratch.mit.edu/projects/119842814/"><img src="images/capture.png"></a>
-	<p class="p2">I made another project using the scratch website. It is based on the 'game' theme. Click on the image to view it!"</p>
+	<p class="p2">I made another project using the scratch website. It is based on the 'game' theme. Click on the image to view it!</p>
 	<a href="https://docs.google.com/spreadsheets/d/1qi825qJxCAphrC_ogfvFZNitKsbgaY5m-rF6dEvY3uc/edit?usp=sharing">BACKLOG</a>
 	<a href="https://repl.it/DxlA/123"><img src="images/mafia.png"></a>
 	<p class="p2">Using the website repl.it, my partner and I were able to make a simple game based off of the card game 'Mafia.' Click on the image to play it!</p>
 	<a href="3.2.7 nathan tran jeffrey kim.zip"><img src="images/jazzz.png"></a>
-	<p class="p2">Harnessing the unlimited power of the program Canopy, my parter and I were able to create a rainbow-colored statistical extravaganza. Our objective was to create a visual representation of a prompt that was randomly assigned to us. From this assignment, I have learned to value and regard of visual data representation with importance. Click of the picture to download the .zip file! HOWEVER, make sure that you have Canopy insstalled on your computer to run the program!</p>
+	<p class="p2">Harnessing the unlimited power of the program Canopy, my parter and I were able to create a rainbow-colored statistical extravaganza. Our objective was to create a visual representation of a prompt that was randomly assigned to us. From this assignment, I have learned to value and regard of visual data representation with importance. Click of the picture to download the .zip file! HOWEVER, make sure that you have Canopy installed on your computer to run the program!</p>
 	</body>
 
