added netlogo project

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -23,6 +23,8 @@
 	<a href="https://repl.it/DxlA/123"><img src="images/mafia.png"></a>
 	<p class="p2">Using the website repl.it, my partner and I were able to make a simple game based off of the card game 'Mafia.' Click on the image to play it!</p>
 	<a href="3.2.7 nathan tran jeffrey kim.zip"><img src="images/jazzz.png"></a>
-	<p class="p2">Harnessing the unlimited power of the program Canopy, my parter and I were able to create a rainbow-colored statistical extravaganza. Our objective was to create a visual representation of a prompt that was randomly assigned to us. From this assignment, I have learned to value and regard of visual data representation with importance. Click of the picture to download the .zip file! HOWEVER, make sure that you have Canopy installed on your computer to run the program!</p>
+	<p class="p2">Harnessing the unlimited power of the program Canopy, my partner and I were able to create a rainbow-colored statistical extravaganza. Our objective was to create a visual representation of a prompt that was randomly assigned to us. From this assignment, I have learned to value and regard of visual data representation with importance. Click of the picture to download the .zip file! HOWEVER, make sure that you have Canopy installed on your computer to run the program!</p>
+	<a href="4.2.3 nathan_tran tan_tran.zip"><img src="images/netlogo.png"></a>
+	<p class="p2">This project was created through the program known as Netlogo. With Netlogo, my partner and I improved a simple simulation on pollution. From weakening trees to spawning cars, our changes were quite numerous and achieved the goal of creating a more accurate simulation of pollution. If you're interested, click on the image to download the .zip file that consists of the Netlogo simulation and all of our research and presentation files. HOWEVER, make sure that you have at least Netlogo 5.3.1 installed on your computer!</p>
 	</body>
 
